use jooq tools to map from and to history record
see CDR-690